--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1567,107 +1567,107 @@ stories:
   domain: http://www.timesnewspapers.com/
   link: https://www.timesnewspapers.com/webster-kirkwoodtimes/trains-hit-car-on-tracks-but-no-one-injured/article_e1158de6-265f-11ea-ba65-3fbd2272cd39.html
 images:
-- name: mediterranean-mediterranean-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-three.jpg
-- name: copper-circuit-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-coming-up-tracks.jpg
-- name: mediterranean-mediterranean-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-soul.jpg
-- name: flower-barbed-wire-flower-barbed-wire-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-aqua.jpg
-- name: oldtrain-oldtrain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kand-two.jpg
-- name: hollywood-building-hollywood-building-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kandinsky-bv.jpg
-- name: server-cloud1-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-feed-people.jpg
-- name: bf-skinner-highway-granary_36331800650_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-highway-granary_36331800650_o.jpg
-- name: oldhousecars-house-old-cars-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-rainbow-festival.jpg
-- name: white-house-lawn-white-house-window-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-oily-mcoilface.jpg
-- name: old-school-house-old-schoolhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-dream.jpg
-- name: old-gas-pumps-oldgaspumps-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-plentiful.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-asteroids.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
-- name: la-muse-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-bridge-over-columbia.jpg
-- name: old-barn-old-barn-1500-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gan-vogh.jpg
-- name: meadowbutterfly-meadow-butterfly-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-really-hot.jpg
-- name: sand-hand-sand-hand-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dali-two.jpg
-- name: catacombs-catacombs-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crabapple.jpg
+- name: dragon-desert-desert-dragon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-dali.jpg
+- name: beach-rocks-beach-rocks-currents-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-yellow-collage.jpg
+- name: gears-4882162452-fa3126b38d-b-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-hot-spicy.jpg
+- name: statue-of-liberty-front-view-statueofliberty-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-alien-goggles.jpg
+- name: rockingchair-face-2-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colored-circuits.jpg
+- name: oldhouse-granaryfield-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-graham-sutherland.jpg
+- name: berlinwall-DSC-0084-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-dali.jpg
+- name: aws-s3-stories-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit.jpg
+- name: old-building-clouds-with-tree-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-norman-rockwell-ruby-bridges.jpg
+- name: locked-up-steam-lock-up-steam-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-storm.jpg
+- name: subway-subway-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crabapple.jpg
+- name: sand-hand-sand-hand-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-horiz-circuit.jpg
+- name: nazi-invasion-miami-beach-tower-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-miami-beach-tower-city.jpg
+- name: hollywood-building-hollywood-building-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-ww2-color.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
+- name: oldhousecars-house-old-cars-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colored-circuits.jpg
+- name: lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
+- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: dc-statue-dcstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crunch-paper.jpg
+- name: stalin-time-sunflower-big-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sunflower-big-green.jpg
+- name: bf-skinner-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-fat-old-pigeon-on-fence.jpg
+- name: dc-statue-dcstatue-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-rain.jpg
+- name: ellis-island-ellis-island-room-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-clean-view.jpg
+- name: supreme-court-supremecourt-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-space-pizza.jpg
+- name: mosaic-face-mosaic-face-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
+- name: ellis-island-ellis-island-room-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crabapple.jpg
+- name: abe-lincoln-one-smooth-ride-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-15-87.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
+- name: oldhouse-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dry-skin.jpg
+- name: dragon-desert-desert-dragon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-satan-red.jpg
+- name: bf-skinner-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hotel-down-sidewalk.jpg
+- name: aws-s3-stories-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-clean-view.jpg
+- name: status-berlin-status-berlin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin.jpg
+- name: bf-skinner-soliders-fighting-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-soliders-fighting-statue.jpg
+- name: border-fence-border-fence-on-hill-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-really-hot.jpg
+- name: hollywood-building-hollywood-building-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alberto-giacometti.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-5.jpg
+- name: trucksilo-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-brush.jpg
 - name: meadowbutterfly-meadow-butterfly-crafty-painting.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crafty-painting.jpg
-- name: downtheline-downtheline-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-really-hot.jpg
-- name: copper-circuit-seattle-waterfront-ferris-wheel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-waterfront-ferris-wheel.jpg
-- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
-- name: subway-subway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
-- name: old-gas-pumps-oldgaspumps-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kandinsky-bv.jpg
-- name: bf-skinner-shipping-docks_36331347010_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-shipping-docks_36331347010_o.jpg
-- name: downtheline-downtheline-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-emily-carr.jpg
-- name: windowmountain-window-mountain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-asteroids.jpg
-- name: gypsy-wagon-gypsywagon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon.jpg
-- name: stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
-- name: nazi-invasion-statue-face-looking-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-face-looking-up.jpg
-- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
-- name: oldcabin-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-07-91.jpg
-- name: yosemite-yosemite-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
-- name: downtown-los-angeles-downtown-la-light-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-light-dali.JPG
-- name: copper-circuit-thinking-man-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-thinking-man-statue.jpg
-- name: bf-skinner-san-francisco-wharf-clock.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-francisco-wharf-clock.jpg
-- name: yosemite-yosemite-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-monet-one.jpg
-- name: eduardo-eduardo-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-rain.jpg
-- name: stalin-time-docks-big-cosco-ship.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-docks-big-cosco-ship.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
-- name: flower-barbed-wire-flower-barbed-wire-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-monet-one.jpg
-- name: bordercrossing-bordercrossing-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crafty-painting.jpg
-- name: border-crossing-bordercrossing-cinnamon-rolls.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-cinnamon-rolls.png
-- name: oldhousecars-house-old-cars-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-matrix.jpg
-- name: rockingchair-face-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-circuit.jpg
-- name: nyc-flag-nycflag-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
-- name: downtown-fredericksburg-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-clean-view.JPG
-- name: beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-- name: oldroad-old-road-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-purple-pond.jpg
+- name: copper-circuit-cross-against-trees.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cross-against-trees.jpg
+- name: oldhotel-oldhotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel.jpg
+- name: window-window-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-deep-connections.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
+- name: old-door-lock-old-door-lock-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-asteroids.jpg
+- name: locked-up-steam-lock-up-steam-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colored-circuits.jpg
+- name: crow-crow-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crabapple.jpg
+- name: white-house-whitehouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
+- name: locked-up-steam-lock-up-steam-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-gred-mash.jpg
 ---
 Santa Visits High Point.&nbsp;Retailers Pleased With Christmas Shopping Season.&nbsp;Why A Personalized Diet Can Help You Achieve Better Results.&nbsp;Home For The Holidays.&nbsp;Protecting Rural Nevadans From Robocalls Is A Priority.&nbsp;Child Safe After Being Taken On Joyride In Stolen Car.&nbsp;Pope Francis Appeals For Prayers For Somalia Blast Victims.&nbsp;Arizona Hosts Dallas Following Shootout Win.&nbsp;
